--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PORT=3001;
+PORT=3001
 CONNECTION_STRING=mongodb+srv://pushpraj:admin@pushpcluster1.dejexsi.mongodb.net/mycontact-backend?retryWrites=true&w=majority
